# Supernova-Engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conan-init.ps1  conanfile.py  main.cpp  settings.yml
.github/workflows/: build.yml
SuperNova/Editor/: main.cpp
SuperNova/Editor/private/Editor/: Editor.hpp
SuperNova/Editor/source/: Editor.cpp  main.cpp
SuperNova/Engine/private/Engine/Assets/ShaderParser/: Lexer.hpp  ShaderParser.hpp  ShaderParserError.hpp  ShaderParserUtils.hpp
SuperNova/Engine/private/Engine/Renderer/: IImGuiRenderContext.hpp  RenderDefaults.hpp
SuperNova/Engine/private/Engine/Renderer/DirectX12/: DX12Backend.hpp  DX12DescriptorHeap.hpp  DX12ImGuiRenderContext.hpp  DX12ShaderCompiler.hpp
SuperNova/Engine/private/Engine/Renderer/Directx11/: DX11Backend.hpp  DX11ImGuiRenderContext.hpp  DX11ShaderCompiler.hpp
SuperNova/Engine/private/Engine/Renderer/GpuApiCommon/: DXCommon.hpp
SuperNova/Engine/private/Engine/Renderer/OpenGL/: GLBackend.hpp  GLBuffer.hpp  GLImGuiRenderContext.hpp  GLShader.hpp  GLTexture.hpp
SuperNova/Engine/private/Engine/Renderer/RenderPasses/: EngineRenderPass.hpp  ImGuiRenderPass.hpp
SuperNova/Engine/private/Engine/Renderer/Vulkan/: VKBackend.hpp  VKShaderCompiler.hpp  VulkanBackend.hpp  VulkanShaderCompiler.hpp
SuperNova/Engine/private/Engine/Utils/: EnumStrings.hpp  EnumUtils.hpp
SuperNova/Engine/public/Engine/: Engine.hpp  EngineSettings.hpp
SuperNova/Engine/public/Engine/Application/: Application.hpp  IApplicationLayer.hpp  Window.hpp
SuperNova/Engine/public/Engine/Assets/: AssetDatabase.hpp  Material.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp
SuperNova/Engine/public/Engine/Components/: Camera.hpp  CameraController.hpp  ComponentFactory.hpp  MeshRenderer.hpp  Transform.hpp
SuperNova/Engine/public/Engine/Core/: Assert.hpp  Core.hpp  Log.hpp
SuperNova/Engine/public/Engine/Entity/: GameObject.hpp
SuperNova/Engine/public/Engine/Input/: Cursor.hpp  Input.hpp  Keyboard.hpp  KeyboardKey.hpp  Mouse.hpp
SuperNova/Engine/public/Engine/Renderer/: IRenderPass.hpp  IRendererBackend.hpp  RenderContext.hpp  RenderGraph.hpp  RenderGraphBuilder.hpp  RenderTypes.hpp  Renderer.hpp
SuperNova/Engine/public/Engine/Renderer/RenderPasses/: ResourceNames.hpp
SuperNova/Engine/public/Engine/UI/: ImGuiContext.hpp
SuperNova/Engine/public/Engine/Utils/: Singleton.hpp  Time.hpp
SuperNova/Engine/source/: Engine.cpp
SuperNova/Engine/source/Application/: Application.cpp  Window.cpp
SuperNova/Engine/source/Assets/: AssetDatabase.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
SuperNova/Engine/source/Assets/ShaderParser/: Lexer.cpp  ShaderParser.cpp  ShaderParserUtils.cpp
SuperNova/Engine/source/Components/: Camera.cpp  CameraController.cpp  ComponentFactory.cpp  MeshRenderer.cpp  Transform.cpp
SuperNova/Engine/source/Core/: Log.cpp
SuperNova/Engine/source/Entity/: GameObject.cpp
SuperNova/Engine/source/Input/: Cursor.cpp  Keyboard.cpp  Mouse.cpp
SuperNova/Engine/source/Renderer/: RenderContext.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderTypes.cpp  Renderer.cpp
SuperNova/Engine/source/Renderer/DirectX12/: DX12Backend.cpp  DX12DescriptorHeap.cpp  DX12ImGuiRenderContext.cpp  DX12ShaderCompiler.cpp
SuperNova/Engine/source/Renderer/Directx11/: DX11Backend.cpp  DX11ImGuiRenderContext.cpp  DX11ShaderCompiler.cpp
SuperNova/Engine/source/Renderer/GpuApiCommon/: DXCommon.cpp
SuperNova/Engine/source/Renderer/OpenGL/: GLBackend.cpp  GLBuffer.cpp  GLImGuiRenderContext.cpp  GLShader.cpp  GLTexture.cpp
SuperNova/Engine/source/Renderer/RenderPasses/: EngineRenderPass.cpp  ImGuiRenderPass.cpp
SuperNova/Engine/source/Renderer/Vulkan/: VKBackend.cpp  VKShaderCompiler.cpp  VulkanBackend.cpp  VulkanShaderCompiler.cpp
SuperNova/Engine/source/UI/: ImGuiContext.cpp
SuperNova/Engine/source/Utils/: EnumUtils.cpp  Time.cpp
assets/shaders/: triangle_fs.glsl  triangle_fs.hlsl  triangle_vs.glsl  triangle_vs.hlsl
assets/shaders/dx/: ImGui.shader  Main.shader  triangle_vs.hlsl
assets/shaders/gl/: ImGui.shader  Main.shader  triangle_fs.glsl  triangle_vs.glsl
assets/shaders/vk/: Main.shader  triangle_fs.glsl  triangle_vs.glsl
cmake/: FindGLSLang.cmake  conan.cmake
source/: EngineDefinitions.h  EventAction.cpp  EventAction.h  ObservableField.cpp  ObservableField.h  main.cpp
source/Application/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
source/Assets/: AssetDatabase.cpp  AssetDatabase.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
source/Components/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Transform.cpp  Transform.hpp
source/Core/: Application.cpp  Application.hpp  Assert.hpp  ComponentFactory.cpp  ComponentFactory.hpp  Core.hpp  Log.cpp  Log.hpp  Window.cpp  Window.hpp
source/Core/Utils/: MemoryUtils.hpp  Singleton.hpp
source/Engine/: Engine.cpp  Engine.hpp
source/Entity/: GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.h
source/EventSystem/: Event.hpp
source/Input/: Cursor.cpp  Cursor.hpp  Input.hpp  InputSystem.cpp  InputSystem.hpp  InputUtils.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardKey.hpp  Mouse.cpp  Mouse.hpp
source/Renderer/: IRendererBackend.hpp  RenderTypes.hpp  Renderer.cpp  Renderer.hpp
source/Renderer/DirectX12/: DX12Backend.cpp  DX12Backend.hpp  DX12ShaderCompiler.cpp  DX12ShaderCompiler.hpp
source/Renderer/Directx11/: DX11Backend.cpp  DX11Backend.hpp
source/Renderer/OpenGL/: GLBackend.cpp  GLBackend.hpp  GLBuffer.cpp  GLBuffer.hpp  GLGraphicsBuffer.cpp  GLGraphicsBuffer.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp
source/Utils/: Time.cpp  Time.hpp
